--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,12 @@ spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.PostgreSQLDialect
 
 # Hibernate ddl auto (create, create-drop, validate, update)
 spring.jpa.hibernate.ddl-auto=create
+
+logging.level.root=info
+logging.level.org.springframework.web=trace
+logging.level.org.hibernate=error
+
+# Locations of static resources (bugfix for swagger 3.0.0)
+spring.mvc.pathmatch.matching-strategy=ant-path-matcher
+
+server.servlet.context-path=/lab
