[#17] Add some sample data on startup

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,11 +5,21 @@ spring.datasource.password= password
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation= true
 spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.PostgreSQLDialect
 
-# Hibernate ddl auto (create, create-drop, validate, update)
+# Hibernate ddl auto (none, create, create-drop, validate, update)
+# only for development
+#   create = create new tables and columns on startup
+#   create-drop = create on startup, test and then drop
+#   validate = ?
+#   update = update existing database
 spring.jpa.hibernate.ddl-auto=create
 
+# reset database on every startup
+spring.sql.init.mode=always
+
+spring.jpa.defer-datasource-initialization=true
+
 logging.level.root=info
-logging.level.org.springframework.web=trace
+logging.level.org.springframework.web=error
 logging.level.org.hibernate=error
 
 # Locations of static resources (bugfix for swagger 3.0.0)
