--- a/angular-frontend/package.json
+++ b/angular-frontend/package.json
@@ -3,17 +3,18 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
-    "@angular/animations": "^10.0.4",
-    "@angular/common": "^10.0.4",
-    "@angular/compiler": "^10.0.4",
-    "@angular/core": "^10.0.4",
-    "@angular/forms": "^10.0.4",
-    "@angular/platform-browser": "^10.0.4",
-    "@angular/platform-browser-dynamic": "^10.0.4",
-    "@angular/router": "^10.0.4",
-    "rxjs": "^6.6.0",
-    "tslib": "^2.0.0",
-    "zone.js": "^0.10.3"
+    "@angular-devkit/build-angular": "^13.1.2",
+    "@angular/animations": "^13.1.1",
+    "@angular/common": "^13.1.1",
+    "@angular/compiler": "^13.1.1",
+    "@angular/core": "^13.1.1",
+    "@angular/forms": "^13.1.1",
+    "@angular/platform-browser": "^13.1.1",
+    "@angular/platform-browser-dynamic": "^13.1.1",
+    "@angular/router": "^13.1.1",
+    "rxjs": "^7.4.0",
+    "tslib": "^2.3.1",
+    "zone.js": "^0.11.4"
   },
   "scripts": {
     "ng": "ng",
@@ -24,24 +25,23 @@
     "e2e": "ng e2e"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.10.0",
-    "@angular/cli": "9.0.0-rc.7",
-    "@angular/compiler-cli": "9.0.0-rc.7",
-    "@angular/language-service": "~7.0.0",
-    "@types/node": "~8.9.4",
-    "@types/jasmine": "~2.8.8",
-    "@types/jasminewd2": "~2.0.3",
+    "@angular/cli": "^13.1.2",
+    "@angular/compiler-cli": "~13.1.1",
+    "@angular/language-service": "~7.2.15",
+    "@types/jasmine": "~2.8.18",
+    "@types/jasminewd2": "~2.0.10",
+    "@types/node": "~8.10.66",
     "codelyzer": "~4.5.0",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~3.0.0",
+    "karma": "^6.3.9",
     "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "~2.0.1",
+    "karma-coverage-istanbul-reporter": "~2.1.1",
     "karma-jasmine": "~1.1.2",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "protractor": "~5.4.0",
-    "ts-node": "~7.0.0",
-    "tslint": "~5.11.0",
-    "typescript": "~3.1.1"
+    "protractor": "~7.0.0",
+    "ts-node": "~10.4.0",
+    "tslint": "~5.20.1",
+    "typescript": "~4.5.4"
   }
 }
