--- a/angular-frontend/package.json
+++ b/angular-frontend/package.json
@@ -3,7 +3,6 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
-    "@angular-devkit/build-angular": "^13.1.2",
     "@angular/animations": "^13.1.1",
     "@angular/common": "^13.1.1",
     "@angular/compiler": "^13.1.1",
@@ -12,6 +11,7 @@
     "@angular/platform-browser": "^13.1.1",
     "@angular/platform-browser-dynamic": "^13.1.1",
     "@angular/router": "^13.1.1",
+    "npm": "^8.3.0",
     "rxjs": "^7.4.0",
     "tslib": "^2.3.1",
     "zone.js": "^0.11.4"
@@ -25,9 +25,11 @@
     "e2e": "ng e2e"
   },
   "devDependencies": {
+    "@angular-devkit/build-angular": "^13.1.2",
     "@angular/cli": "^13.1.2",
     "@angular/compiler-cli": "~13.1.1",
     "@angular/language-service": "~7.2.15",
+    "@angular/localize": "^13.1.1",
     "@types/jasmine": "~2.8.18",
     "@types/jasminewd2": "~2.0.10",
     "@types/node": "~8.10.66",
