--- a/angular-frontend/package.json
+++ b/angular-frontend/package.json
@@ -11,6 +11,7 @@
     "@angular/platform-browser": "^13.1.1",
     "@angular/platform-browser-dynamic": "^13.1.1",
     "@angular/router": "^13.1.1",
+    "angular-bootstrap-md": "^12.1.0",
     "npm": "^8.3.0",
     "rxjs": "^7.4.0",
     "tslib": "^2.3.1",
